--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ color: white !important;
 }
 h5 {
     font-size: 3rem !important;
-    text-shadow: 1px 1px white;
+    text-shadow: 1px 1px black;
     color: #DADD8F !important;
 }
 .gif {
